--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
    <script src="main.js" defer></script>
 </head>
 <body>
-  <div id="map"></div>
-  <h2 id="command"></h2>
-  <h2 id="result"></h2>
+  <div class="map-container">
+    <div id="map"></div>
+    <div class="command"></div>
+    <div class="result"></div>
+  </div>
 </body>
 </html>
