Progress and time added to command container

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 <body>
   <div class="map-container">
     <div id="map"></div>
-    <div class="command"></div>
+    <div class="command-container">
+      <div class="progress"></div>
+      <div class="command"></div>
+      <div class="time-elapsed"></div>
+    </div>
     <div class="result"></div>
   </div>
 </body>
