3-2-1 countdown before game start implemented

--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
 
 <body>
   <div class="map-container">
-    <div id="map"></div>
-    <div class="command-container">
+    <div id="map" class="to-blur"></div>
+    <div class="command-container to-blur">
       <div class="progress"></div>
       <div class="command"></div>
       <div class="time-elapsed"></div>
+    </div>
+    <div class="countdown-timer">
+      <span class="countdown num3">3</span>
+      <span class="countdown num2">2</span>
+      <span class="countdown num1">1</span>
+      <span class="countdown go">Go!</span>
     </div>
     <div class="result"></div>
   </div>
