Highscore in localstorage & after game infobox

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
       <span class="countdown num1">1</span>
       <span class="countdown go">Go!</span>
     </div>
+    <div class="end-of-game-infobox">
+      <div>
+        <div class="end-of-game-infobox-heading">Result</div>
+        <div class="end-of-game-infobox-content">75% of your guesses were correctly (3 out of 4)</div>
+        <div class="end-of-game-infobox-highscore">(add highscore here with current game highlighted, if good enough)</div>
+        <div class="end-of-game-infobox-links">(Link to donate, highscores)</div>
+        <button class="play-again-button">Play Again</button>
+      </div>
+    </div>
     <div class="result"></div>
   </div>
 </body>
