More work on end-of-game-infobox

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
     <div class="end-of-game-infobox">
       <div>
-        <div class="end-of-game-infobox-heading">Result</div>
-        <div class="end-of-game-infobox-content">75% of your guesses were correctly (3 out of 4)</div>
-        <div class="end-of-game-infobox-highscore">(add highscore here with current game highlighted, if good enough)</div>
+        <h1 class="end-of-game-infobox-heading">Result</h1>
+        <div class="end-of-game-infobox-result"></div>
+        <table class="end-of-game-infobox-highscore"></table>
         <div class="end-of-game-infobox-links">(Link to donate, highscores)</div>
         <button class="play-again-button">Play Again</button>
       </div>
