--- a/index.html
+++ b/index.html
@@ -2,15 +2,58 @@
 <html lang="en">
 
 <head>
+  <!-- Basic -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GeoQuiz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Search Engine -->
+  <meta name="description"
+    content="Practice your geography skills by picking the right country on a map. All countries of the world are supported.">
+  <meta name="image"
+    content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
+  <link rel="canonical" href="https://geoquiz.renek.cc/" />
+  <meta name="keywords" content="Geography, quiz, education, countries" />
+
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="GeoQuiz">
+  <meta itemprop="description" content="Practice your geography skills by picking the right country on a map.">
+  <meta itemprop="image"
+    content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Open Graph general (Facebook, Twitter, ...) -->
+  <meta property="og:title" content="GeoQuiz">
+  <meta property="og:description" content="Practice your geography skills by picking the right country on a map.">
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
+  <meta property="og:logo"
+    content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/android-chrome-512x512.png">
+  <meta property="og:url" content="https://geoquiz.renek.cc/">
+  <meta property="og:site_name" content="GeoQuiz">
+  <meta property="og:type" content="website">
+
+  <!-- Favicon related -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+  <link rel="manifest" href="./img/site.webmanifest">
+  <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="./img/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="./img/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- style related -->
   <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin="" />
+
+  <!-- scripts -->
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
