Global site tag (gtag.js) - Google Analytics added

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
   <!-- Search Engine -->
   <meta name="description"
     content="Practice your geography skills by picking the right country on a map. All countries of the world are supported.">
-  <meta name="image"
-    content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
+  <meta name="image" content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
   <link rel="canonical" href="https://geoquiz.renek.cc/" />
   <meta name="keywords" content="Geography, quiz, education, countries" />
 
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="GeoQuiz">
   <meta itemprop="description" content="Practice your geography skills by picking the right country on a map.">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
+  <meta itemprop="image" content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
@@ -28,8 +26,7 @@
   <!-- Open Graph general (Facebook, Twitter, ...) -->
   <meta property="og:title" content="GeoQuiz">
   <meta property="og:description" content="Practice your geography skills by picking the right country on a map.">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/SocialMedia-GeoQuiz.png">
   <meta property="og:logo"
     content="https://raw.githubusercontent.com/rene78/GeoQuiz/main/img/android-chrome-512x512.png">
   <meta property="og:url" content="https://geoquiz.renek.cc/">
@@ -46,6 +43,16 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="./img/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EJJ79BYR2E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-EJJ79BYR2E');
+  </script>
 
   <!-- style related -->
   <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
