Outline for highscores.html & Minor details

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     </div>
     <div class="result"></div>
   </div>
+  <!-- <h1>Highscore</h1>
+  <a href="./highscore.html" target="_blank" rel="noopener noreferrer">Link to highscore</a> -->
 </body>
 
 </html>
