First draft of an welcome infobox added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 
 <body>
   <div class="map-container">
+    <div class="welcome-infobox">
+      <button class="expand-button"><img class="arrow-image" src="./img/arrow_left.png" alt="Arrow left"></button>
+      <h2>The infobox</h2>
+      <p>(Gonna add some infos regarding the game here)</p>
+    </div>
     <div id="map" class="to-blur"></div>
     <div class="command-container to-blur">
       <div class="progress"></div>
@@ -93,6 +98,7 @@
   </div>
   <!-- <h1>Highscore</h1>
   <a href="./highscore.html" target="_blank" rel="noopener noreferrer">Link to highscore</a> -->
+  <!-- <button class="showHideWelcome">Show/Hide</button> -->
 </body>
 
 </html>
