More work on welcome infobox

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
   <div class="map-container">
     <div class="welcome-infobox">
       <button class="expand-button"><img class="arrow-image" src="./img/arrow_left.png" alt="Arrow left"></button>
-      <h2>The infobox</h2>
-      <p>(Gonna add some infos regarding the game here)</p>
+      <img src="./img/favicon.svg" alt="Logo of GeoQuiz" class="logo">
+      <p class="welcome-infobox-heading">GeoQuiz</p>
+      <p class="welcome-infobox-intro">Practice your geography skills by picking the right country on a map. All countries of the world are supported.</p>
     </div>
     <div id="map" class="to-blur"></div>
     <div class="command-container to-blur">
