Welcome infobox pretty much finalized

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       <img src="./img/favicon.svg" alt="Logo of GeoQuiz" class="logo">
       <p class="welcome-infobox-heading">GeoQuiz</p>
       <p class="welcome-infobox-intro">Practice your geography skills by picking the right country on a map. All countries of the world are supported.</p>
+      <a class="welcome-infobox-links highscore-link" href="./highscore.html" target="_blank"><img src="./img/high-score-icon.jpg" alt="Highscore icon" class="thumbnails">Highscore</a>
+      <p class="welcome-infobox-help">Want to help?</p>
+      <a class="welcome-infobox-links" href="https://github.com/rene78/GeoQuiz" target="_blank"><img src="./img/github-icon.png" alt="GitHub icon" class="thumbnails">Improve the code</a>
+      <a class="welcome-infobox-links translate-link" href="https://www.transifex.com/renes-open-source-projects/geoquiz" target="_blank"><img src="./img/transifex-iconjpg.jpg" alt="Transifex icon" class="thumbnails">Translate game</a>
+      <a class="welcome-infobox-links donate-link" href="https://tallyco.in/s/6dfzf2/" target="_blank"><img src="./img/lightning-icon.png" alt="Donate icon" class="thumbnails">Donate some Sats</a>
+      <p class="welcome-infobox-dont-show"><input type="checkbox" id="dont-show">Don't show on startup</p>
     </div>
     <div id="map" class="to-blur"></div>
     <div class="command-container to-blur">
