--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
       <button class="expand-button"><img class="arrow-image" src="./img/arrow_left.png" alt="Arrow left"></button>
       <img src="./img/favicon.svg" alt="Logo of GeoQuiz" class="logo">
       <p class="welcome-infobox-heading">GeoQuiz</p>
-      <p class="welcome-infobox-intro">_Practice your geography skills by picking the right country on a map. All countries of the world are supported.</p>
-      <a class="welcome-infobox-links highscore-link" href="./highscore.html" target="_blank"><img src="./img/high-score-icon.jpg" alt="Highscore icon" class="thumbnails"><span class="highscore-text">_Highscore</span></a>
-      <p class="welcome-infobox-help">_Want to help?</p>
-      <a class="welcome-infobox-links github-link" href="https://github.com/rene78/GeoQuiz" target="_blank"><img src="./img/github-icon.png" alt="GitHub icon" class="thumbnails"><span class="github-text">_Improve the code</span></a>
-      <a class="welcome-infobox-links translate-link" href="https://www.transifex.com/renes-open-source-projects/geoquiz" target="_blank"><img src="./img/transifex-iconjpg.jpg" alt="Transifex icon" class="thumbnails"><span class="translate-text">_Translate game</span></a>
-      <a class="welcome-infobox-links donate-link" href="https://tallyco.in/s/6dfzf2/" target="_blank"><img src="./img/lightning-icon.png" alt="Donate icon" class="thumbnails"><span class="donate-text">_Donate some Sats</span></a>
+      <p class="welcome-infobox-intro">Practice your geography skills by picking the right country on a map. All countries of the world are supported._</p>
+      <a class="welcome-infobox-links highscore-link" href="./highscore.html" target="_blank"><img src="./img/high-score-icon.jpg" alt="Highscore icon" class="thumbnails"><span class="highscore-text">Highscore_</span></a>
+      <p class="welcome-infobox-help">Want to help?_</p>
+      <a class="welcome-infobox-links github-link" href="https://github.com/rene78/GeoQuiz" target="_blank"><img src="./img/github-icon.png" alt="GitHub icon" class="thumbnails"><span class="github-text">Improve the code_</span></a>
+      <a class="welcome-infobox-links translate-link" href="https://www.transifex.com/renes-open-source-projects/geoquiz" target="_blank"><img src="./img/transifex-iconjpg.jpg" alt="Transifex icon" class="thumbnails"><span class="translate-text">Translate game_</span></a>
+      <a class="welcome-infobox-links donate-link" href="https://tallyco.in/s/6dfzf2/" target="_blank"><img src="./img/lightning-icon.png" alt="Donate icon" class="thumbnails"><span class="donate-text">Donate some Sats_</span></a>
       <p class="welcome-infobox-dont-show">
         <input type="checkbox" id="dont-show" name="dontShow">
-        <label for="dontShow" id="dont-show-label">_Don't show on startup</label>
+        <label for="dontShow" id="dont-show-label">Don't show on startup_</label>
       </p>
     </div>
     <div id="map" class="to-blur"></div>
