Harmonized style of game & highscore to dark theme

--- a/highscore.html
+++ b/highscore.html
@@ -20,9 +20,16 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- style related -->
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/highscore.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
   <!-- scripts -->
   <script src="./js/highscore.js" type="module"></script>
+
+  <style>
+    html, body {
+      width: auto;
+      height: auto;
+    }
+  </style>
 </head>
 
 <body>
