--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div>
         <h1 class="end-of-game-infobox-heading">Result</h1>
         <div class="end-of-game-infobox-result"></div>
-        <table class="end-of-game-infobox-highscore"></table>
+        <table class="end-of-game-infobox-highscore table-container"></table>
         <button class="play-again-button">Play Again</button>
       </div>
     </div>
