Started a help document: How to add a region

--- a/filepreparator.html
+++ b/filepreparator.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Append iso_a3 to GeoJSON property</title>
+  <title>GeoQuiz File Preparator</title>
 </head>
 
 <body>
-  <h1>GeoQuiz file preparator</h1>
+  <h1>GeoQuiz File Preparator</h1>
   <h2>Purpose</h2>
   <p>This tool helps in the following way:
   <ul>
